--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "prefer-stable": true,
     "require": {
         "php": ">=7.1",
-        "slevomat/coding-standard": "~4.0",
-        "squizlabs/php_codesniffer": "^3.0"
+        "slevomat/coding-standard": "^4.0",
+        "squizlabs/php_codesniffer": "^3.1"
     }
 }
